--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -1,2 +1,4 @@
 body { background-color: slategray; }
 h1 { color: darkred; }
+
+<a href="https://www.rapidtables.com/web/css/css-color.html">Style Reference</a>
