--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -1,4 +1,4 @@
 body { background-color: #708090; slategray; }
-h1 { color: #8B0000; darkred; }
+h1 { text-align: center; color: #8B0000; darkred; }
 hr { color: #2F4F4F; darkslategray; }
 <a href="https://www.rapidtables.com/web/css/css-color.html">Style Reference</a>
