--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -1,6 +1,10 @@
 body { background-color: #708090; slategray; }
 h1 { text-align: center; color: #8B0000; darkred; }
 hr { color: #2F4F4F; darkslategray; }
-
+figure { 
+					margin: 1em; 
+					padding: 1em; 
+					border: 1em thin solid; 
+				}
 /*"https://www.rapidtables.com/web/css/css-color.html"*/
 /*https://fonts.google.com/*/
