--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -3,10 +3,11 @@ h1 { text-align: center; color: #8B0000; darkred; }
 hr { color: #2F4F4F; darkslategray; }
 i { color: #8B0000; darkred; }
 figure { 
-					background-color: darkseagreen;
+					background-color: #2F4F4F; darkslategray;
 					margin: 1em; 
 					padding: 1em; 
 					border: 1em thin solid; 
+					border-color: #000000; black; 
 				}
 /*"https://www.rapidtables.com/web/css/css-color.html"*/
 /*https://fonts.google.com/*/
