--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -4,7 +4,7 @@ hr { color: #2F4F4F; darkslategray; }
 i { color: #8B0000; darkred; }
 figure { 
 					display: block;
-					background-color: #2F4F4F; darkslategray;
+					background-color: #778899; lightslategray;
 					margin: 1em; 
 					padding: 1em; 
 					border: 1em thin solid; 
