--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -7,7 +7,7 @@ figure {
 					background-color: #778899; lightslategray;
 					margin: 1em; 
 					padding: 1em; 
-					border: 1em thin solid; 
+					border: 1em solid; 
 					border-color: #000000; black; 
 				}
 /*"https://www.rapidtables.com/web/css/css-color.html"*/
