--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -20,7 +20,7 @@ body>header>nav>ol>li>a {
 							}
 
 nav {
-   	float: center;
+   	text-align: center;
     	width: 100%;
     	padding: 20px;
 			}
@@ -28,6 +28,4 @@ nav {
 
 nav ul { list-style-type: none; padding: 0; }
 
-@media (max-width: 600px) { nav, article { width: 100%; height: auto; }
-
-}
+@media (max-width: 600px) { nav, article { width: 100%; } }
