--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -18,4 +18,4 @@ body>header>nav>ol>li>a {
     				color: blue;
     				text-decoration: red;}
 
-@media only screen and (max-width: 600px) { body>header>nav { background-color: lightblue; } }
+@media only screen and (max-width: 600px) { body>header>nav>ol>li { background-color: lightblue; } }
