--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -17,5 +17,9 @@ body>header>nav>ul>li>a {
     				padding: 1em;
     				color: blue;
     				text-decoration: red;}
-
+ul {    
+	list-style-type: none;
+    	margin: 0;
+	padding: 0; 
+				}
 @media only screen and (max-width: 600px) { li a { display: block; width: 600px; } }
