--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -1,3 +1,4 @@
+@media print { @page { size: auto; margin: 0; } body { margin: 1.6cm; } }
 li { color : blue; }
 body { margin: 0; }
 body { background-color : gray;}
