--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -18,6 +18,8 @@ body>header>nav>ul>li>a {
     				padding: 1em;
     				color: blue;
     				text-decoration: red;}
+
+#Header, #Footer #ul { display: none !important; }
 ul {    
 	list-style-type: none;
     	margin: 0;
