--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -18,8 +18,7 @@ body>header>nav>ul>li>a {
     				padding: 1em;
     				color: blue;
     				text-decoration: red;}
-@media print { #Header, #Footer { display: none !important; } }
-#Header, #Footer #ul { display: none !important; }
+@media print { body>header>nav>ul { display: none !important; } }
 ul {    
 	list-style-type: none;
     	margin: 0;
