--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -21,7 +21,7 @@ body>header>nav>ul>li>a {
 
 @media only screen and (max-width: 600px) { body>header>nav>ul>li>a { display: block; color: green; width: 600px; } }
 
-@media print { body>header>nav>ul { display: none !important; } }
+@media print { body>header>nav>ul { display: none !important; } h1 { display: none !important; } }
 ul {    
 	list-style-type: none;
     	margin: 0;
