--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -27,3 +27,13 @@ ul {
     	margin: 0;
 	padding: 0; 
 				}
+
+#togBut {
+  		border: 2px solid white;
+  		border-radius: 25px;
+  		background: #8296DF;
+  		padding: 5px;  			}
+
+#togBut:hover {
+  			background: black;
+  			color: white; 		}
