--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -29,7 +29,7 @@ ul {
 				}
 
 #togBut {
-  		border: 2px solid white;
+  		border: 2px solid black;
   		background: gray;
   		padding: 5px;  			}
 
