--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -1,7 +1,7 @@
 @media print { @page { size: auto; margin: 0; } body { margin: 1.6cm; } }
 li { color : blue; }
 body { margin: 0; }
-body { background-color : gray;}
+body { background-color : white;}
 li { text-align: center; }
 body>header { text-align: center; }
 body>header>ul>li {
