--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -28,11 +28,11 @@ ul {
 	padding: 0; 
 				}
 
-#togBut {
+/*#togBut {
   		border: 2px solid black;
   		background: gray;
   		padding: 5px;  			}
 
 #togBut:hover {
   			background: black;
-  			color: white; 		}
+  			color: white; 		}*/
