--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -2,7 +2,7 @@
 li { color : blue; }
 body { margin: 0; }
 
-li { text-align: center; }
+/*li { text-align: center; }*/
 body>header { text-align: center; }
 body>header>ul>li {
     			margin: 0;
