--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -5,7 +5,7 @@ body { margin: 0; }
 li { text-align: justify; }
 body>header { text-align: justify; }
 body>header>ul>li {
-			text-align: justify;
+			text-align: center;
     			margin: 0;
     			padding: 0;
     			list-style-type: none;
