--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -11,7 +11,7 @@ body>header>ul>li {
     			list-style-type: none;
 							}
 body>header>nav>ul>li>a { color: blue; }
-body>header>nav>ul>li :hover { background-color: black; color: green; }
+body>header>nav>ul>li :hover { background-color: black; color: blue; }
 body>header>nav>ul>li :active { background-color: gray; }
 body>header>nav>ul>li { display: inline-block; padding: 1em; list-style-type: none;  }
 body>header>nav>ul>li>a {
