--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -13,7 +13,7 @@ body>header>ul>li {
 body>header>nav>ul>li>a { color: blue; }
 body>header>nav>ul>li :hover { background-color: black; color: yellow; }
 body>header>nav>ul>li :active { background-color: gray; }
-body>header>nav>ul>li { padding: 1em; list-style-type: none;  }
+body>header>nav>ul>li { display: inline-block; padding: 1em; list-style-type: none;  }
 body>header>nav>ul>li>a {
     				
     				padding: 1em;
