--- a/NavLinkWeek6.css
+++ b/NavLinkWeek6.css
@@ -20,6 +20,6 @@ body>header>nav>ul>li>a {
     				color: blue;
     				text-decoration: red;}
 
-@media only screen and (max-width: 1200px) { body>header>nav>ul>li>a { display: block; color: green; list-style-type: none; width: 1200px; margin: auto; } }
+@media only screen and (max-width: 1200px) { body>header>nav>ul>li>a { display: block; color: green; list-style-type: none; margin: auto; } }
 
 @media print { body>header>nav>ul { display: none !important; } h1, hr { display: none !important; } }
