--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -12,7 +12,7 @@ figure {
 		border style: 1em thin solid; 
 		border-color: #000000; black; 
 						}
-div {
+table {
 	display: block;
 	background-color: #778899; lightslategray;
 	margin: 1em; 
