--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -12,7 +12,9 @@ figure {
 		border style: 1em thin solid; 
 		border-color: #000000; black; 
 						}
-th { text-align: left; }
+th {	text-align: center;
+	color: #8B0000; darkred;
+					}
 div {
 	display: block;
 	background-color: #778899; lightslategray;
@@ -21,7 +23,7 @@ div {
 	p.solid {border-style: solid;}
 	border style: 1em thin solid; 
 	border-color: #000000; black;
-	overflow: auto;
+	overflow: scroll;
 	text-align: left;
 							}
 /*"https://www.rapidtables.com/web/css/css-color.html"*/
