--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -13,8 +13,25 @@ figure {
 		border-color: #000000; black; 
 						}
 th {	text-align: center;
-	color: #8B0000; darkred;
+
 					}
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #8B0000; darkred; #778899; lightslategray; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #2F4F4F; darkslategray; 
+}
+
+}
+
 div {
 	display: block;
 	background-color: #778899; lightslategray;
