--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -37,7 +37,7 @@ div {
 	margin: 10px; 
 	padding: 1em; 
 	p.solid { border-style: solid; }
-	border style: solid; 
+	border-style: solid; 
 	border-color: #000000; black;
 	text-align: left;
 							}
