--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -33,9 +33,9 @@ th {	text-align: center;
 
 div {
 	display: block;
-	background-color: #778899; lightslategray;
+	background-color: #525E5D; #778899; lightslategray;
 	margin: 10px; 
-	padding: 1em; 
+	padding: 10px; 
 	p.solid { border-style: solid; }
 	border-style: solid; 
 	border-color: #000000; black;
