--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -33,7 +33,7 @@ th {	text-align: center;
 
 div {
 	display: block;
-	background-color: #525E5D; #778899; lightslategray;
+	background-color: #000000; black; #778899; lightslategray;
 	margin: 10px; 
 	padding: 10px; 
 	p.solid { border-style: solid; }
