--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -19,7 +19,11 @@ table { text-align: left;
 	background-color: sienna; #525E5D;
 	border:ridge 10px gray; 
 					}
-  table td       {border:inset 1px #778899;}
+
+  table td       {	border:inset 1px #778899;
+			margin: 10px; 
+			padding: 10px;
+							}
   table tr#ROW1  {background-color:#696969;}
 /*
 ::-webkit-scrollbar {
