--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -16,7 +16,7 @@ th {	text-align: center;
 
 					}
 table { text-align: left;
-	background-color: sienna; #525E5D;
+	background-color: sienna; #A0522D;
 	border:ridge 10px gray; 
 					}
 
