--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -16,7 +16,7 @@ th {	text-align: center;
 
 					}
 table { text-align: left;
-	background-color: sienna; #A0522D;
+	background-color: rosybrown; #BC8F8F;
 	border:ridge 10px gray; 
 					}
 table td       {	border:inset 1px #778899;
