--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -16,9 +16,9 @@ th {	text-align: center;
 
 					}
 table { text-align: left;
-	background-color: rosybrown; #BC8F8F;
-	border:ridge 10px gray; 
-					}
+	background-color: #DEB887; rosywood; #BC8F8F; burlywood;
+	border:ridge 10px #808080; gray; 
+									}
 table td       {	border:inset 1px #778899;
 			margin: 10px; 
 			padding: 10px;
