--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -16,7 +16,7 @@ th {	text-align: center;
 
 					}
 table { text-align: left;
-	background-color: #DEB887; rosywood; #BC8F8F; burlywood;
+	background-color: #FAF0E6; linen; #BC8F8F; burlywood;
 	border:ridge 10px #808080; gray; 
 									}
 table td       {	border:inset 1px #778899;
