--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -17,9 +17,9 @@ th {	text-align: center;
 					}
 table { text-align: left;
 	background-color: #778899; lightslategray;
-	border:ridge 10px #B22222; firebrick;
+	
 									}
-table td       {	border:inset 1px #8B0000; darkred;
+table td       {	
 			margin: 10px; 
 			padding: 10px;
 							}
