--- a/ProjectStyle.css
+++ b/ProjectStyle.css
@@ -17,9 +17,10 @@ th {	text-align: center;
 					}
 table { text-align: left;
 	background-color: #778899; lightslategray;
+	border: inset 5px #000;
 	
 									}
-table td       {	border: inset 10px #000;
+table td       {	border: inset 5px #000;
 			margin: 10px; 
 			padding: 10px;
 							}
